@@ -64,8 +64,11 @@ Template for new versions:
 ## Documentation
 
 ## API
+- ``Units::assignTrainer``: assign a trainer to a trainable animal
 
 ## Lua
+- ``dfhack.units.isTamable``: return false for invaders to match vanilla logic
+- ``dfhack.units.assignTrainer``: expose new API to Lua
 
 ## Removed
 - ``nopause``: functionality has moved to `spectate`
